# POC-Go-Python-JSON-RPC-streaming-communication

./: .gitignore  README.md  docker-compose.yml  specs.md
client/: Dockerfile  go.mod  go.sum  main.go
server/: Dockerfile  pyproject.toml
server/time_service/: __init__.py  main.py  service.py
